2013-07-31 Gregory L. Lee <lee218@llnl.gov>
	* scr/STAT.i : added higher-level Python wrapping
	* examples/scripts/script_test.py : added basic test suite
	* src/STAT_FrontEnd.C : re-enabled MRNet failure recovery with FGFS

2013-07-30 Gregory L. Lee <lee218@llnl.gov>
	* src/STAT_FrontEnd.C : disabled serial attach for BlueGene
	* src/STAT_FrontEnd.C : first-level of check node access look for localhost
	* src/STATD.C : add serial processes after log enabled

2013-07-24 Gregory L. Lee <lee218@llnl.gov>
	* scripts/STATview.py : added maintain user zoom option for node manipulation operations

2013-07-17 Gregory L. Lee <lee218@llnl.gov>
	* scripts/STATGUI.py : new filter/searchable ptab dialog
	* scripts/STATview.py : new cut/hide programming models interface

2013-06-07 Gregory L. Lee <lee218@llnl.gov>
	* scripts/STATGUI.py : fixed bug in TV attach when STAT not attached
	* scripts/STATGUI.py : user can add command-line args to TV/DDT

2013-06-05 Gregory L. Lee <lee218@llnl.gov>
	* src/STAT_BackEnd.C : Dump local stack traces on signal
	* src/STAT_FrontEnd.C : Send output directory and file prefix to BE on attach
	* src/STAT.h : incremented minor version for protocol change

2013-05-28 Matthew LeGendre <legendre1@llnl.gov>
	* src/STAT_BackEnd.C : Added BGQ Timeouts during hang while stackwalking

2013-05-15 Gregory L. Lee <lee218@llnl.gov>
	* scripts/stat-cl.in : enable -c by default
	* src/STAT.C : -P -i -t will disable -c

2013-05-14 Gregory L. Lee <lee218@llnl.gov>
	* src/STAT_FrontEnd.C : write to perf file after every merge

2013-05-10 Gregory L. Lee <lee218@llnl.gov>
	* : integrated DysectAPI from Niklas Nielsen
	* src/MRNetSymbolReader.h : removed BGQ FGFS workaround

2013-04-30 Gregory L. Lee <lee218@llnl.gov>
	* src/STAT_FrontEnd.C : fixed handling of missing ranks list for STATBench

2013-04-29 Gregory L. Lee <lee218@llnl.gov>
	* src/STAT_FrontEnd.C : fixed handling of missing ranks list for STATBench

2013-04-28 Gregory L. Lee <lee218@llnl.gov>